--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </body>
 <hr>
 <body>
-    <body style="background-color:gray">
+    <body style="background:gray">
         <h1 >Formula-1</h1>
         <p>
         A <b>Formula–1</b> <i>(rövidítve: F1, magyarul korábban rendszerint Forma–1, angolul: Formula One)</i> a legrangosabb nemzetközi autóverseny-sorozat, melynek szabályait a <b>Nemzetközi Automobil Szövetség</b> <i>(FIA)</i> határozza meg.
