--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
 
-    <img src="f1.png" height="157" width="629"
-    <p>A 2018 óta használt logó.</p>
+    <a href="https://www.formula1.com/" target="formula1"> <img src="f1.png" height="50"> </a>
+    <p style="font-size:small">A 2018 óta használt logó.</p>
 </body>
 <hr>
 <body>
