--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
         Formula–1-es világbajnokságban nyitott karosszériájú, együléses versenyautók vehetnek részt. A versenysorozat több állomásból, <b>Grand Prix</b>-ből <i>(nagydíjból)</i> áll, amelyeket szilárd burkolatú, erre a célra kialakított zárt, vagy városi pályákon rendeznek. Az eredmények alapján évente két világbajnokot avatnak, egy egyénit és egy konstruktőrit <i>(csapat-világbajnokság)</i>. A versenyeket több százmillióan nézik televízión, a világ több mint kétszáz országában.
         </p>
         <hr>
-        <h2>Története</h2>
-        <p>
-        Az első Formula–1-es világbajnokságot 1950-ben rendezték.
-        </p>
+        
+        <h2><a href="tortenete.html">Története</a></h2>
+        
 </body>
 </html>
