--- a/pontrendszer.html
+++ b/pontrendszer.html
@@ -4,63 +4,112 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <title>Pontrendszer</title>
 </head>
 <body>
-    <h2>Pontrendszer</h2>
-        <table>
+
+    <div class="logo">
+        <br>
+        <a href="https://www.formula1.com/" target="formula1">
+            <img src="f1.png" alt="Formula-1 logo" title="A Formula-1 hivatalos oldala" class="kep">
+        </a>
+       <br>
+    </div>
+    <hr>
+    <p class="cim">
+        PONTRENDSZER
+    </p>
+    <hr>
+<div class="feher_hatter">
+  <br>
+    <table>
+            <tr>
+                <th></th>
+                <th>2019-</th>
+                <th>2010-2018</th>
+                <th>2003-2009</th>
+                <th>1991-2002</th>
+                <th>1962-1990</th>
+                <th colspan="2">1961</th>
+                <th>1960</th>
+                <th>1950-1959</th>
+            </tr>
             <tr>
                 <th>1. hely</th>
-                <td>25 pont</td>
+                <td colspan="2">25</td>
+                <td>10</td>
+                <td>10</td>
+                <td colspan="2">9</td>
+                <td colspan="3">8</td>
+                
             </tr>
             <tr>
                 <th>2. hely</th>
-                <td>18 pont</tr>
+                <td colspan="2">18</td>
+                <td>8</td>
+                <td colspan="6">6</td>
             </tr>
             <tr>
                 <th>3. hely</th>
-                <td>15 pont</td>
+                <td colspan="2">15</td>
+                <td>6</td>
+                <td colspan="6">4</td>
             </tr>
             <tr>
                 <th>4. hely</th>
-                <td>12 pont</td>
+                <td colspan="2">12</td>
+                <td>5</td>
+                <td colspan="6">3</td>
             </tr>
             <tr>
                 <th>5. hely</th>
-                <td>10 pont</td>
+                <td colspan="2">10</td>
+                <td>4</td>
+                <td colspan="6">2</td>
             </tr>
             <tr>
                 <th>6. hely</th>
-                <td>8 pont</td>
+                <td colspan="2">8</td>
+                <td>3</td>
+                <td colspan="5">1</td>
+                <td rowspan="5">-</td>
             </tr>
             <tr>
                 <th>7. hely</th>
-                <td>6 pont</td>
+                <td colspan="2">6</td>
+                <td>2</td>
+                <td rowspan="5"; colspan="5">-</td>
             </tr>
             <tr>
                 <th>8. hely</th>
-                <td>4 pont</td>
+                <td colspan="2">4</td>
+                <td>1</td>
             </tr>
             <tr>
                 <th>9. hely</th>
-                <td>2 pont</td>
+                <td colspan="2">2</td>
+                <td rowspan="3">-</td>
             </tr>
             <tr>
                 <th>10. hely</th>
-                <td>1 pont</td>
+                <td colspan="2">1</td>
+            </tr>
+            <tr>
+                <th>Leggyorsabb<br>kör</th>
+                <td>+1</td>
+                <td>-</td>
+                <td>+1</td>
             </tr>
         </table>
-<p><a href="index.html">Vissza a főoldalra</a></p>
-
-
-
-
-
-
-
-
-
+        <br>
+    </div>
+    <hr>
+<h2>
+    <a href="index.html">
+    Főoldal
+    </a>
+</h2>
 
 
 
