--- a/index.html
+++ b/index.html
@@ -4,24 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta hrel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <title>Formula-1</title>
 </head>
-<body>
-    <a href="https://www.formula1.com/" target="formula1"> <img src="f1.png" height="50" title="Formula-1 logo"> </a>
-    <p style="font-size:small">A 2018 óta használt logó.</p>
-</body>
-<hr>
-<body>
 
-    <h1 >Formula-1</h1>
-        <p>
+<body>
+    <div class="logo">
+        <br>
+        <a href="https://www.formula1.com/" target="formula1">
+            <img src="f1.png" alt="Formula-1 logo" title="A Formula-1 hivatalos oldala" class="kep">
+        </a>
+       <br>
+    </div>
+    <hr>
+
+    <p class="cim">
+        FORMULA-1
+    </p>
+    <hr>
+<div class="">
+    <p>
+        
         A <b>Formula–1</b> <i>(rövidítve: F1, magyarul korábban rendszerint Forma–1, angolul: Formula One)</i> a legrangosabb nemzetközi autóverseny-sorozat, melynek szabályait a <b>Nemzetközi Automobil Szövetség</b> <i>(FIA)</i> határozza meg.
-        </p>
-        Formula–1-es világbajnokságban nyitott karosszériájú, együléses versenyautók vehetnek részt. A versenysorozat több állomásból, <b>Grand Prix</b>-ből <i>(nagydíjból)</i> áll, amelyeket szilárd burkolatú, erre a célra kialakított zárt, vagy városi pályákon rendeznek. Az eredmények alapján évente két világbajnokot avatnak, egy egyénit és egy konstruktőrit <i>(csapat-világbajnokság)</i>. A versenyeket több százmillióan nézik televízión, a világ több mint kétszáz országában.
-        </p>
-        <hr>
-        <h2><a href="pontrendszer.html">Pontrendszer</a></h2>
+    </p>
+    <p>
+        Formula–1-es világbajnokságban nyitott karosszériájú, együléses versenyautók vehetnek részt. A versenysorozat több állomásból, <b>Grand Prix</b>-ből <i>(nagydíjból)</i> áll, amelyeket szilárd burkolatú, erre a célra kialakított zárt, vagy városi pályákon rendeznek. Az eredmények alapján évente két világbajnokot avatnak, egy <span title="Max Verstappen">egyénit</span> és egy <span title="Oracle Red Bull Racing">konstruktőrit <i>(csapat-világbajnokság)</i></span>. A versenyeket több százmillióan nézik televízión, a világ több mint kétszáz országában.
+    </p>
+</div>
+<hr>
+<h2 class=""><a href="pontrendszer.html">Pontrendszer</a></h2>
+
+
 
 </body>
 </html>
