--- a/tortenete.html
+++ b/tortenete.html
@@ -4,14 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>F1 története</title>
-</head>
-<body>
-    <h2>Története</h2>
+    <link rel="stylesheet" href="style.css">
 
-<p>
-    
-    Az első Formula–1-es világbajnokságot 1950-ben rendezték.
-    </p>
+
+    <title>Története</title>
+</head>
+
+<body id="magassag">
+
+    <div class="keret">
+        <div id="header">
+            <nav>
+                <a href="https://www.formula1.com/" target="formula1">
+                    <img src="f1.png" alt="Formula-1 logo" title="A Formula-1 hivatalos oldala" class="logo">
+                </a>
+                <ul>
+                    <li class="active"><a href="index.html">Főoldal</a></li>
+                    <li><a href="pontrendszer.html">Pontrendszer</a></li>
+                    <li><a href="tortenete.html">Története</a></li>
+                </ul>
+            </nav>
+        </div>
+        <hr>
+            <p class="cim">
+                Története
+            </p>
+            <hr>
+            
+    <div id="content">
+                <p>Az első Formula–1-es világbajnokságot 1950-ben rendezték. A Formula–1 történelmi központja Európa, ahonnan a dohányreklámok tilalma, valamint a feltörekvő ázsiai országok gazdasági nyomása miatt kezd kiszorulni. Ma már a világ számos pontján tartanak Formula–1-es nagydíjat, többek között Azerbajdzsánban, Kínában, Bahreinben és Szingapúrban. 2020-ban rekordszámú huszonkettő versenyt rendeznek, ebből kilencet Európában, azonban a kirobbant koronavírus járvány miatt teljesen felkavarta a 2020-as versenynaptárt. 1986 óta folyamatosan megrendezik a Formula–1 magyar nagydíjat, a versenysorozat sokáig egyetlen olyan futamát, amelyet volt szocialista országban rendeztek.</p>
+
+            <h2>Kialakulása</h2>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a3/LangH-MB-W125-1977.jpg" alt="1937, Mercedes W125" title="Mercedes W125" class="mercedes_kep">
+            <p>Miután megszülettek az új technikai csodák, az autók, az emberek hamar felfedezték az <i>autóversenyzés örömeit</i>. Az első verseny után nem sokkal, <b>1906-ban</b>, az <b>első nagydíjat</b> is megrendezték. Nyertese a Renault gyár alkalmazottja, a <i>magyar származású</i> <b>Szisz Ferenc</b> volt. Egy évvel később megnyílt az első versenypálya, a Brooklands. 1911-ben a másik földrészen először rendezték meg a <b>legendás Indy 500-at</b>. Az autóversenyzési láz <i>az I. világháború miatt egy darabig szünetelt</i>. <b>1919-ben</b> <i>újraéledtek a versenypályák</i>, majd <b>1925-ben</b> megnyílt <b>Belgiumban Spa-Francorchamps</b>. Ebben az évben született az első kísérlet arra, hogy a versenyeket egy kerek sorozattá fűzzék össze, amely autógyártóknak szólt, s ezt végül az <i>Alfa Romeo nyerte meg</i>. 1934-ben a német Mercedes és Auto Union beszállásával új fejezet vette kezdetét. A Mercedes versenyzője, Rudolf Caracciola nyerte meg az első Európa-bajnokságot, 1935-ben. A legyőzhetetlen német autók uralmát csak egy másik rendkívüli képességekkel megáldott versenyző, az Alfa Romeós Tazio Nuvolari volt képes megállítani. Az 1936-os magyar nagydíjat (a Népligetben) is ő nyerte. Az autóversenyzés második aranykora a második világháború kitörésével ért véget. 1946-ban megalakult a nemzetközi automobil szövetség, vagyis az FIA. A szövetség új keretbe foglalta az autóversenyzést, és az új szabálynak, vagyis formulának az 1-es számot adták. Eleinte csupán egymástól független Grand Prix-k kerültek megrendezésre, majd <b>1950-ben elindult</b> a világ legnagyobb, <b>legismertebb szériája, a Formula–1</b>. Az első versenynek egy <i>második világháborús repülőtér</i>, <b>Silverstone</b> adott otthont.</p>
+
+    </div>
+    <hr>
+    <h2>
+        <a href="tortenete_2.html">Következő oldal →</a>
+    </h2>    
+    </div>
 </body>
 </html>
